1046. Last Stone Weight v2 + refactoring